<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <!-- Banner with Back Arrow and Title -->
    <FrameLayout
        android:id="@+id/bannerContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:0.6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/bannerImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/banner_image_desc"
            android:scaleType="centerCrop"
            android:src="@drawable/banner_top" />

        <ImageButton
            android:id="@+id/back_arrow"
            android:layout_width="@dimen/back_btn_size"
            android:layout_height="@dimen/back_btn_size"
            android:layout_gravity="top|start"
            android:layout_marginStart="12dp"
            android:layout_marginTop="24dp"
            android:background="@android:color/transparent"
            android:src="@drawable/baseline_arrow_forward_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/back"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
        <TextView
            android:id="@+id/bannerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textColor="#FFFFFF"
            android:textSize="26sp"
            android:fontFamily="@font/poppins_semibold"
            android:layout_gravity="center"
            android:shadowColor="#33000000"
            android:shadowDx="0"
            android:shadowDy="1"
            android:shadowRadius="2"/>
        <TextView
            android:id="@+id/tvSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_small"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/setting_subtitle"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/subtitle_text_size" />
        </LinearLayout>    </FrameLayout>

    <!-- White rounded settings card, with item CardViews -->
    <LinearLayout
        android:id="@+id/settings_card"
        android:layout_width="341dp"
        android:layout_height="320dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="-38dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rounded_white_card"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="36dp"
        android:paddingBottom="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bannerContainer">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardPersonalInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="22dp"
            app:cardBackgroundColor="#fff"
            app:cardCornerRadius="28dp"
            app:cardElevation="8dp">

            <TextView
                android:layout_width="338dp"
                android:layout_height="61dp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_vertical|start"
                android:paddingStart="32dp"
                android:text="@string/change_personal_information"
                android:textColor="#222"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardChangePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="22dp"
            app:cardBackgroundColor="#fff"
            app:cardCornerRadius="28dp"
            app:cardElevation="8dp">

            <TextView
                android:layout_width="338dp"
                android:layout_height="61dp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_vertical|start"
                android:paddingStart="32dp"
                android:text="@string/change_password"
                android:textColor="#222"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardChangeLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#fff"
            app:cardCornerRadius="28dp"
            app:cardElevation="8dp">

            <TextView
                android:layout_width="338dp"
                android:layout_height="61dp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_vertical|start"
                android:paddingStart="32dp"
                android:text="@string/change_language"
                android:textColor="#222"
                android:textSize="16sp" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>
    <!-- Logout Button -->
    <Button
        android:id="@+id/btnLogout"
        android:layout_width="164dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_white_card"
        app:backgroundTint="#FF3B30"
        android:fontFamily="@font/poppins_semibold"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@id/tvFeedback"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <!-- Feedback and Version -->

    <TextView
        android:id="@+id/tvFeedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/send_us_feedback"
        android:textColor="#36AB39"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_card" />

    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/version_1_0_beta"
        android:textColor="#888888"
        android:textStyle="italic"
        android:textSize="13sp"
        app:layout_constraintTop_toBottomOf="@id/tvFeedback"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
